@@ -1,3 +1,6 @@
+* Sun Aug 26 2007 Jesse Keating <jkeating@redhat.com>
+- Add better support for %packages syntax using native pykickstart
+
 * Sat Aug 25 2007 Jesse Keating <jkeating@redhat.com>
 - Use a kickstart file as input now (for cdsize and package manifest)
 - Turn pkglist into a pre-parsed package dictionary
